2006-07-07 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j76-UNSTABLE

 * Fix: Moved colorpicker.php into popus and adjust showColorpicker()

 * Wording fixes.

2006-07-07 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j75-UNSTABLE

 ***** CHANGE *****

 * Nicified Config Wizard
   
   - Stepbar in every step
   - New Welcome page
   - Removed errorpages and instead integrated into welcome page
   - A lot more CSS
   - Splitted Checks into mandatory and recommended
   - Moved embed_hidden() from setup/index.php into lib/setup

2006-06-28 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j74-UNSTABLE

 * Created includes/setup folder.

 * Splitted setup/configdata.inc

2006-06-26 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j73-UNSTABLE

 * Last UpArrow in returnToLink gets an accesskey.

 * Prevention of double use of accesskey via galleryLink.

2006-06-26 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j72-UNSTABLE

 * Moved rebuilding thumbs into its own rebuild_thumbs.php

2006-06-26 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j71-UNSTABLE

 * New: Added popups/recreate_captions.php

2006-06-25 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j70-UNSTABLE

 *** !!! CHANGE !!! ***

 * Created popups/ folder and moved nearly all popups in it

 * Removed HTML Validation link everywhere.
 
 * Adjust includes etc. in popups

 * Tweaked makeGalleryURL
 
2006-06-25 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j69-UNSTABLE

 * Fix: Statusbar was little broken in captionar.php

 * Fix: Error when custom field was not translateable in captionator.php

 * Added debugmessages in classes/gallery/UserDB.php

 * Changed Wording for User integritycheck

 * Nicified layout/watermarkform.inc

 * Fix: invalid css

2006-06-22 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j68-UNSTABLE

 * Accesskeys in item Commands.

2006-06-22 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j67-UNSTABLE

 * Change from _() to gTranslate at various places.

2006-06-22 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j66-UNSTABLE
