@@ -1,3 +1,8 @@
+2006-07-08 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j77-UNSTABLE
+
+ * Use target="_blank" for all external links in wizard.
+   Thanks to Robert -you are fired- Volksport
+
 2006-07-07 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j76-UNSTABLE
 
  * Fix: Moved colorpicker.php into popus and adjust showColorpicker()
